# flipper-pineapple-desktop

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build.bat
src/: flipper.c  flipper.h  main.c  pineapple.c  pineapple.h  serial.c  serial.h  ui.c  ui.h
